# safe-client-gateway

./: .dockerignore  .env.sample  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.local  LICENSE  Procfile  README.MD  README.md  Rocket.toml  RustConfig  add_rustfmt_git_hook.sh  cloudbuild.yaml  crates.js  deployment.yaml  docker-build-dev.sh  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  index.html  renamed_to_avoid_trigerring_travis.yml  rust-toolchain  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
.codebuild/: docker-build.sh  docker-push.sh  nginx.conf  nginx.docker  service.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_chain_request.md
.github/action-rs/: grcov.yml
.github/landing_page/: index.html
.github/workflows/: ci-properties.json  cla.yml  deploy-k8s.yml  deploy_prod.yml  deploy_stag.yml  deployment.yml  run_tests.yml  rust.yml
.github/workflows/action-rs/: grcov.yml
charts/safe-client-gateway/: Chart.yaml  README.md  values.yaml
docs/: all.html  fn.main.html  fn.setup_logger.html  index.html  sidebar-items.js
docs/common/: index.html  sidebar-items.js
docs/common/models/: index.html  (+1 more)
docs/models/: index.html  sidebar-items.js
docs/providers/: index.html  sidebar-items.js
docs/routes/: fn.active_routes.html  fn.error_catchers.html  fn.not_found.html  fn.panic.html  fn.root.html  index.html  sidebar-items.js
docs/safe_client_gateway/: all.html  fn.main.html  index.html  sidebar-items.js
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  serviceaccount.yaml
implementors/schemars/: trait.JsonSchema.js
nginx/templates/: nginx.conf.template
safe-client-gateway-helm/: Chart.yaml  values.yaml
safe-client-gateway-helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
safe_client_gateway/: all.html
safe_client_gateway/routes/: fn.active_routes.html
scripts/: _.deploy_docker.sh  autodeploy.sh  build-and-push-helm-chart.sh  build_docker.sh  deploy_docker.sh  generate_docs.sh  generate_test_tx.sh  staging_tester.py
scripts/cache_warmer/: start.py
scripts/load_tester/: drill_config.yml  start.py
signatures/version1/: cla.json
src/: cache.rs  macros.rs  main.rs  models.rs  routes.rs  services.rs  utils.rs
src/cache/: cache.rs  cache_op_executors.rs  cache_operations.rs  inner_cache.rs  manager.rs  mod.rs  redis.rs  redis_manager.rs
src/common/: mod.rs
src/config/: mod.rs
src/json/: mod.rs
src/models/: chains.rs  commons.rs  mod.rs
src/monitoring/: mod.rs  performance.rs  rate_limiter.rs  request_timer.rs
src/providers/: address_info.rs  ext.rs  fiat.rs  info.rs  mod.rs
src/routes/: about.rs  balances.rs  chains.rs  collectibles.rs  contracts.rs  health.rs  hooks.rs  mod.rs  notifications.rs  safe_apps.rs  safes.rs  transactions.rs  utils.rs
src/safe_client_gateway/: macros.rs.html  main.rs.html
src/services/: about.rs  balances.rs  balances_v2.rs  chains.rs  collectibles.rs  contracts.rs  estimations.rs  hooks.rs  mod.rs  notifications.rs  safe_apps.rs  safes.rs  transactions.rs  transactions_details.rs  transactions_history.rs  transactions_list.rs  transactions_proposal.rs  transactions_queued.rs  tx_confirmation.rs  utils.rs
src/tests/: backend_url.rs  main.rs  mod.rs
src/utils/: cache.rs  context.rs  cors.rs  errors.rs  http_client.rs  json.rs  mod.rs  transactions.rs  urls.rs
(+1193 files in other folders)
