[package]
name = "safe-client-gateway"
version = "3.50.0"
authors = ["jpalvarezl <jose.alvarez@gnosis.io>", "rmeissner <richard@safe.global>", "fmrsabino <frederico.sabino@safe.global>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8-redis = "0.12.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
derivative = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethcontract-common = "0.23.0"
ethabi = "18.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
mockall = "0.11.3"
rand = "0.8.5"
r2d2 = "0.8.10"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
rocket_codegen = { version = "0.5.0-rc.2" }
rocket_okapi = { version="0.8.0-rc.2", features = ["swagger"] }
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
serde_repr = "0.1.10"
thiserror = "1.0.39"
tokio = "1.16.1"
